[package]
name = "dataonion"
version = "0.1.0"
authors = ["IndianBoy42 <rohanmed123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = "0.10.30"
itertools = "0.9.0"
derive_more = "0.99.9"
derivative = "2.1.1"

[dev-dependencies]
criterion = "0.3.2"

[[bench]]
name = "peeling"
harness = false
